<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/location"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/trackButton"
        android:layout_width="113dp"
        android:layout_height="66dp"
        android:background="@color/colorAccent"
        android:text="@string/startTracking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/longitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeText"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/accuracyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/latitudeVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/latitudeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toEndOf="@+id/latitudeText" />

    <TextView
        android:id="@+id/longitudeVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/green"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toEndOf="@+id/longitudeText"
        app:layout_constraintTop_toBottomOf="@+id/latitudeVal" />

    <TextView
        android:id="@+id/accuracyVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:visibility="gone"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/accuracyText"
        app:layout_constraintTop_toBottomOf="@+id/longitudeVal" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="161dp"
        android:layout_height="56dp"
        android:background="@color/yellow"
        android:text="@string/setHome"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/trackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <TextView
        android:id="@+id/homeLocation"
        android:layout_width="143dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/homeLocation"
        android:textColor="@color/green"
        android:visibility="gone"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackButton"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/homeLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/homeLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/homeLocation"
        app:layout_constraintTop_toTopOf="@+id/homeLocation"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clearHome"
        android:layout_width="161dp"
        android:layout_height="56dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/clearHome"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/trackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <TextView
        android:id="@+id/homeLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/homeLocation"
        app:layout_constraintTop_toBottomOf="@+id/homeLatitude"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/smsButton"
        android:layout_width="113dp"
        android:layout_height="66dp"
        android:background="@color/colorAccent"
        android:text="@string/smsText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:background="@color/colorAccent"
        android:text="@string/testMsg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

</androidx.constraintlayout.widget.ConstraintLayout>